--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ ul {
     padding: 6px 15px 6px 30px;
     margin: 2px;
     margin-top: 50px;
-    color: #FFFFFF;
+    color: #2D2D29;
     background-color: #FFFFFF;
     border: 1px solid #adc5cf;
     border-radius: 15px;
