--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ html {
   height: 100%;
   overflow-x: hidden; }
 
+.recuo {
+  text-indent: 10%; }
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
