--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ a:hover {
   text-decoration: none; }
 
 ul {
-  list-style-type: none; }
+  list-style-type: none;
+  list-style-position: inside; }
 
 .navbar, .nav {
   background-color: #215A6D; }
